--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div class="card">
         <figure>
           <img
-            src="p1.jpg"
+            src="P1.jpg"
           />
         </figure>
         <div class="contenido-card">
@@ -172,7 +172,7 @@ Precio: $1,800 MXN
       <div class="card">
         <figure>
           <img
-            src="p2.jpg"
+            src="P2.jpg"
           />
         </figure>
         <div class="contenido-card">
@@ -188,7 +188,7 @@ Precio: $1,600 MXN
       <div class="card">
         <figure>
           <img
-            src="p3.jpg"
+            src="P3.jpg"
           />
         </figure>
         <div class="contenido-card">
@@ -207,7 +207,7 @@ Precio: $1,200 MXN
       <div class="card">
         <figure>
           <img
-            src="p4.jpg"
+            src="P4.jpg"
           />
         </figure>
         <div class="contenido-card">
@@ -224,7 +224,7 @@ Precio: $450 MXN
       <div class="card">
         <figure>
           <img
-            src="p5.jpg"
+            src="P5.jpg"
           />
         </figure>
         <div class="contenido-card">
@@ -241,7 +241,7 @@ Precio: $1,800 MXN
       <div class="card">
         <figure>
           <img
-            src="p6.jpg"
+            src="P6.jpg"
           />
         </figure>
         <div class="contenido-card">
@@ -259,7 +259,7 @@ Precio: $550 MXN
       <div class="card">
         <figure>
           <img
-            src="p7.jpg"
+            src="P7.jpg"
           />
         </figure>
         <div class="contenido-card">
@@ -276,7 +276,7 @@ Precio sugerido: $400 MXN
       <div class="card">
         <figure>
           <img
-            src="p8.jpg"
+            src="P8.jpg"
           />
         </figure>
         <div class="contenido-card">
@@ -293,7 +293,7 @@ Precio sugerido: $450 MXN
       <div class="card">
         <figure>
           <img
-            src="p9.jpg"
+            src="P9.jpg"
           />
         </figure>
         <div class="contenido-card">
