--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
 
     <h1 style="  font-style: ;
-     ">𝓟𝓪𝓼𝓽𝓮𝓵𝓮𝓻𝓲𝓪 𝓛𝓾𝓶𝓲𝓷𝓮</h1>
+     ">Pasteleria Lumine</h1>
     
 
    
@@ -551,7 +551,7 @@ Variedad de infusiones naturales como manzanilla, menta o frutas del bosque, per
 </head>
 <body>
     <h1>𝓤𝓫𝓲𝓬𝓪𝓬𝓲𝓸𝓷 𝓭𝓮 𝓟𝓪𝓼𝓽𝓮𝓵𝓮𝓻𝓲𝓪 𝓛𝓾𝓶𝓲𝓷𝓮</h1>
-    <div class="map-container">
+    <div id="#map" class="map-container">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3732.0808688644383!2d-97.8772633!3d18.9396789!2m3!1f0!2f0!3f0!3m2!1i1024!2i767!4f13.1!3m3!1m2!1s0x85cd89b9fadc54cf%3A0x948c35bbac2ad966!2s%20%C3%ADa%20Casera!5e0!3m2!1ses-419!2smx!4v1697789310463!5m2!1ses-419!2smx" 
             allowfullscreen>
